src/objects/Offer_Incentive__c.object
<CustomObject>
    <description>Offer Incentive</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The Amount is a dollar value or a %. 
E.g. You can have 5 dollars off
E.g. You can have 5% off.</description>
        <inlineHelpText>The Amount is a dollar value or a %. 
E.g. You can have 5 dollars off
E.g. You can have 5% off.</inlineHelpText>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Expiration_End_Date__c</fullName>
        <description>Bank Expiration End Date</description>
        <inlineHelpText>Bank Expiration End Date</inlineHelpText>
        <label>Bank Expiration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Expiration_End_Hour__c</fullName>
        <description>Bank Expiration End Hour</description>
        <globalPicklist>Hour</globalPicklist>
        <inlineHelpText>Bank Expiration End Hour</inlineHelpText>
        <label>Bank Expiration End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Expiration_End_Minute__c</fullName>
        <description>Bank Expiration End Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Bank Expiration End Minute</inlineHelpText>
        <label>Bank Expiration End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Expiration_Start_Date__c</fullName>
        <description>Bank Expiration Start Date</description>
        <inlineHelpText>Bank Expiration Start Date</inlineHelpText>
        <label>Bank Expiration Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Expiration_Start_Minute__c</fullName>
        <description>Bank Expiration Start Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Bank Expiration Start Minute</inlineHelpText>
        <label>Bank Expiration Start Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank__c</fullName>
        <description>Bank Expiration Start Hour</description>
        <globalPicklist>Hour</globalPicklist>
        <inlineHelpText>Bank Expiration Start Hour</inlineHelpText>
        <label>Bank Expiration Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_End_Date__c</fullName>
        <description>Last date on which a guest can book a reservation.</description>
        <inlineHelpText>Last date on which a guest can book a reservation.</inlineHelpText>
        <label>Booking End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Booking End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_End_Minute__c</fullName>
        <description>Booking End Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Booking End Minute</inlineHelpText>
        <label>Booking End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Date__c</fullName>
        <description>First date on which they can book a reservation.</description>
        <inlineHelpText>First date on which they can book a reservation.</inlineHelpText>
        <label>Booking Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Booking Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booking_Start_Minute__c</fullName>
        <description>Booking Start Minute</description>
        <globalPicklist>Minute_Offer</globalPicklist>
        <inlineHelpText>Booking Start Minute</inlineHelpText>
        <label>Booking Start Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>Method of calculating dynamic offer value</description>
        <inlineHelpText>Method of calculating dynamic offer value</inlineHelpText>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>UP1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UP5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOWN1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOWN5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLAT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Vaild_End_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Vaild End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Valid_Start_Date__c</fullName>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Valid Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Companion_Share__c</fullName>
        <description>Number of Companion Guests Eligible for Offer Incentive</description>
        <inlineHelpText>Number of Companion Guests Eligible for Offer Incentive</inlineHelpText>
        <label>Companion Share</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <description>This is a text string for placement on the collateral and visible to Guest on Channels.</description>
        <inlineHelpText>This is a text string for placement on the collateral and visible to Guest on Channels.</inlineHelpText>
        <label>Disclaimer</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Description__c</fullName>
        <description>Offer Description for Employee</description>
        <inlineHelpText>Offer Description for Employee</inlineHelpText>
        <label>Employee Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entertainment_Type__c</fullName>
        <description>Entertainment Type</description>
        <inlineHelpText>Entertainment Type</inlineHelpText>
        <label>Entertainment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Concert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sporting Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Entertainment Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flat_Multiplier__c</fullName>
        <description>Think of this as providing the guest a flat amount of credits such as 500 reward credits or a Reward Credit Multiplier such as times 5.</description>
        <inlineHelpText>Think of this as providing the guest a flat amount of credits such as 500 reward credits or a Reward Credit Multiplier such as times 5.</inlineHelpText>
        <label>Reward Credit or Multiplier</label>
        <picklist>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiplier</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guest_Description__c</fullName>
        <description>The Guest Description is a long description displayed on Guest View Channels. Business wants 3K characters.</description>
        <inlineHelpText>The Guest Description is a long description displayed on Guest View Channels. Business wants 3K characters.</inlineHelpText>
        <label>Guest Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hotel_Booking_Code__c</fullName>
        <description>Hotel Booking Code</description>
        <inlineHelpText>Hotel Booking Code</inlineHelpText>
        <label>Hotel Booking Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Time_Zone__c</fullName>
        <formula>&quot;PST&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>IF(ISNULL( Offer_Definition__c ) ,IF(ISNULL( Offer_Incentive_Group__c ), &apos;&apos;,     Offer_Incentive_Group__r.Offer_Definition__r.Campaign_Project__r.Market_Text__c) , Offer_Definition__r.Campaign_Project__r.Market_Text__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Offer_Amount__c</fullName>
        <description>Max offer amount, used in dynamic value offer calculation</description>
        <inlineHelpText>Max offer amount, used in dynamic value offer calculation</inlineHelpText>
        <label>Maximum Offer Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Redemption__c</fullName>
        <description>Max Redemption</description>
        <inlineHelpText>Max Redemption</inlineHelpText>
        <label>Max Redemption Allowed</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Reward_Credit__c</fullName>
        <description>Max Reward Credit, for loyalty credit incentive</description>
        <inlineHelpText>Max Reward Credit, for loyalty credit incentive</inlineHelpText>
        <label>Max Reward Credit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Offer_Amount__c</fullName>
        <label>Minimum Offer Amount</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Reward_Credit__c</fullName>
        <description>Min reward credit, if Loyalty Credits Incentive Category/Subcategory is selected</description>
        <inlineHelpText>Min reward credit, if Loyalty Credits Incentive Category/Subcategory is selected</inlineHelpText>
        <label>Min Reward Credit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Nights__c</fullName>
        <description>Number of Nights, applies to travel/hotel incentive</description>
        <inlineHelpText>Number of Nights, applies to travel/hotel incentive</inlineHelpText>
        <label>Number of Nights</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Offer Definition</description>
        <inlineHelpText>Lookup to Offer Definition</inlineHelpText>
        <label>Offer Definition</label>
        <referenceTo>Offer_Definition__c</referenceTo>
        <relationshipLabel>Offer Incentives</relationshipLabel>
        <relationshipName>Offer_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Category__c</fullName>
        <description>Offer Incentive Category</description>
        <globalPicklist>Offer_Incentive_Category</globalPicklist>
        <inlineHelpText>Offer Incentive Category</inlineHelpText>
        <label>Incentive Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offer Incentive Group</description>
        <inlineHelpText>Offer Incentive Group</inlineHelpText>
        <label>Offer Incentive Group</label>
        <referenceTo>Offer_Incentive_Group__c</referenceTo>
        <relationshipLabel>Offer Incentives</relationshipLabel>
        <relationshipName>Offer_Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Id__c</fullName>
        <description>Offer Incentive Id</description>
        <inlineHelpText>Offer Incentive Id</inlineHelpText>
        <label>Offer Incentive Id</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Label__c</fullName>
        <description>Incentive Choice/Package Description</description>
        <inlineHelpText>Incentive Choice/Package Description</inlineHelpText>
        <label>Incentive Choice/Package Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Incentive_Subcategory__c</fullName>
        <description>Offer Incentive Subcategory</description>
        <globalPicklist>Offer_Incentive_Subcategory</globalPicklist>
        <inlineHelpText>Offer Incentive Subcategory</inlineHelpText>
        <label>Incentive Subcategory</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Offer_Valid_Day_Count__c</fullName>
        <description>Offer Valid day count (applicable for Time Valid = Daily)</description>
        <inlineHelpText>Offer Valid day count (applicable for Time Valid = Daily)</inlineHelpText>
        <label>Offer Valid Day Count</label>
        <summaryForeignKey>Offer_Incentive_Valid_Date__c.Offer_Incentive__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_to_TR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer Incentive open to all Total Reward Members</description>
        <inlineHelpText>Offer Incentive open to all Total Reward Members</inlineHelpText>
        <label>Open to TR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Campaign_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use campaign project date or override the date setting</description>
        <inlineHelpText>Use campaign project date or override the date setting</inlineHelpText>
        <label>Override Campaign Date Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Worth__c</fullName>
        <description>Percentage of worth for dynamic value offer calculation</description>
        <inlineHelpText>Percentage of worth for dynamic value offer calculation</inlineHelpText>
        <label>Percentage of Worth</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Project_Campaign_Offer_Redemption_Key__c</fullName>
        <description>This field will be used by developer to find the campaign project ID and if it has redemption values</description>
        <formula>if(isblank(Offer_Definition__r.Campaign_Project__r.Id),&apos;NoProject&apos;,Offer_Definition__r.Campaign_Project__r.Id) 

+&apos;$&lt;id&gt;$&apos;+  
if(isblank(Offer_Definition__r.Campaign_Project__r.Redemption_Channel__c),&apos;NoValues&apos;,&apos;HasValues&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Campaign Offer Redemption Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redemption_Channel__c</fullName>
        <globalPicklist>Campaign_Redemption_Channel</globalPicklist>
        <label>Redemption Channel</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reservation_Phone_Number__c</fullName>
        <description>Reservation Contact Number</description>
        <inlineHelpText>Reservation Contact Number</inlineHelpText>
        <label>Reservation Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reward_Credit_Visible_Guest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reward Credit or Multiplier Visible to Guest</description>
        <inlineHelpText>Reward Credit or Multiplier Visible to Guest</inlineHelpText>
        <label>Reward Credit or Multiplier Visible to G</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Valid_Type__c</fullName>
        <description>This is a choice of (1) DURATION. E.g. this offer can be redeemed for the duration of the offer,  from the Offer Start Date/Time until the Offer End Date/Time or (2) DAILY. E.g. this offer can be redeemed each day from 10am until 2pm from Offer Start Date to Offer End Date.</description>
        <inlineHelpText>This is a choice of (1) DURATION. E.g. this offer can be redeemed for the duration of the offer,  from the Offer Start Date/Time until the Offer End Date/Time or (2) DAILY. E.g. this offer can be redeemed each day from 10am until 2pm from Offer Start Date</inlineHelpText>
        <label>Time Valid  (Daily or Duration)</label>
        <picklist>
            <picklistValues>
                <fullName>Duration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_End_Date__c</fullName>
        <label>Valid End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_End_Duration__c</fullName>
        <description>The duration, in minute, from valid start to valid end date and time. It is used for validation purpose only</description>
        <formula>IF(ISNULL( Valid_Start_Date__c), 0, 
IF(ISNULL(  Valid_End_Date__c), 0,
IF ( (Valid_End_Date__c - Valid_Start_Date__c) &lt;0, 0,

(Valid_End_Date__c - Valid_Start_Date__c) * 24 * 60 + 
(24 - ( value(text(Valid_Start_Hour__c)) +  value(text(Valid_Start_Minute__c)) )) * 60   +  value(text(Valid_End_Hour__c))  +  value(text(Valid_End_Minute__c)) 



)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The duration, in minute, from valid start to valid end date and time. It is used for validation purpose only</inlineHelpText>
        <label>Valid End Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_End_Hour__c</fullName>
        <globalPicklist>Hour</globalPicklist>
        <label>Valid End Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_End_Minute__c</fullName>
        <globalPicklist>Minute_Offer</globalPicklist>
        <label>Valid End Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Date__c</fullName>
        <description>Valid start date for this incentive</description>
        <inlineHelpText>Valid start date for this incentive</inlineHelpText>
        <label>Valid Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Hour__c</fullName>
        <description>Valid Start Hour</description>
        <globalPicklist>Hour</globalPicklist>
        <inlineHelpText>Valid Start Hour</inlineHelpText>
        <label>Valid Start Hour</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Start_Minute__c</fullName>
        <globalPicklist>Minute_Offer</globalPicklist>
        <label>Valid Start Minute</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <description>The value type (Amount, Percentage, Dynamic) of this incentive</description>
        <inlineHelpText>The value type (Amount, Percentage, Dynamic) of this incentive</inlineHelpText>
        <label>Value Type</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynamic</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Type__c</fullName>
        <description>Venue Type</description>
        <inlineHelpText>Venue Type</inlineHelpText>
        <label>Venue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visible_to_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make Offer Incentive Visible to Employee</description>
        <inlineHelpText>Make Offer Incentive Visible to Employee</inlineHelpText>
        <label>Visible to Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible_to_Guest__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Make Offer Incentive Visible to Guest</description>
        <inlineHelpText>Make Offer Incentive Visible to Guest</inlineHelpText>
        <label>Visible to Guest</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Incentive</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OI-{0000000000}</displayFormat>
        <label>Offer Incentive Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer Incentives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>